test/soft-contract/ill-typed/intro1.caprice
(* TEST
  include refutable;
  skip; # requires wrapping, which is not yet implemented
*)


let f x g =
  g (x + 1)

let h (y : int | y > 1) : unit =
  ()

let main (n : int) : unit =
  if n >= 0 (* ERROR: this should be strict > *)
  then f n h
  else ()
